# rip

./: .gitignore  CHANGELOG.md  CLAUDE.md  COPYRIGHT  README.md  design.md  pyproject.toml
src/rip/: __init__.py  cli.py  config.py  encoder.py  exceptions.py  metadata.py  playlist.py  ripper.py  tagger.py  utils.py
test/: conftest.py  test_config.py  test_encoder.py  test_metadata.py  test_playlist.py  test_ripper.py  test_tagger.py  test_utils.py
