[project]
name = 'cd-ripper'
version = '2.0.0-dev'
description = 'Modern CD ripper supporting MP3, FLAC, Opus, Ogg Vorbis, and AAC'
authors = [
  {name = 'Gregory J. Smethells', email = 'smethegj@cs.wisc.edu'}
]
readme = 'README.md'
requires-python = '>=3.11'
license = {text = 'GPL-2.0-or-later'}
keywords = ['cd', 'ripper', 'encoder', 'mp3', 'flac', 'opus', 'ogg', 'aac']
classifiers = [
  'Development Status :: 4 - Beta',
  'Environment :: Console',
  'Intended Audience :: End Users/Desktop',
  'License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)',
  'Operating System :: POSIX :: Linux',
  'Programming Language :: Python :: 3.11',
  'Topic :: Multimedia :: Sound/Audio :: CD Audio :: CD Ripping',
]
dependencies = [
  'mutagen>=1.47.0',
  'musicbrainzngs>=0.7.1',
  'discid>=1.2.0',
]

[project.optional-dependencies]
acoustid = ['pyacoustid>=1.3.0']
progress = ['rich>=13.0.0']
dev = [
  'pytest>=7.0.0',
  'pytest-cov>=4.0.0',
  'pytest-mock>=3.12.0',
  'ruff>=0.1.0',
]

[project.scripts]
rip = 'rip.cli:main'

[project.urls]
Homepage = 'https://github.com/gsmethells/rip'
Repository = 'https://github.com/gsmethells/rip'
Issues = 'https://github.com/gsmethells/rip/issues'

[build-system]
requires = ['setuptools>=68.0.0', 'wheel']
build-backend = 'setuptools.build_meta'

[tool.setuptools.packages.find]
where = ['src']

[tool.ruff]
line-length = 120
indent-width = 2
target-version = 'py311'

[tool.ruff.lint]
select = [
  'E',   # pycodestyle errors
  'W',   # pycodestyle warnings
  'F',   # pyflakes
  'I',   # isort
  'N',   # pep8-naming
  'UP',  # pyupgrade
  'B',   # flake8-bugbear
  'C4',  # flake8-comprehensions
  'SIM', # flake8-simplify
]
ignore = [
  'E501',  # Line too long (handled by formatter)
  'N802',  # Function name should be lowercase (we use camelCase per CLAUDE.md)
  'N803',  # Argument name should be lowercase (we use camelCase per CLAUDE.md)
  'N806',  # Variable in function should be lowercase (we use camelCase per CLAUDE.md)
]

[tool.ruff.format]
quote-style = 'single'
indent-style = 'space'

[tool.pytest.ini_options]
testpaths = ['test']
python_files = ['test_*.py']
python_classes = ['Test*']
python_functions = ['test_*']
addopts = '-v --strict-markers'
markers = [
  'integration: marks tests as integration tests (deselect with -m "not integration")',
]
