[project]
name = 'cd-ripper'
version = '2.0.0-dev'
description = 'Modern CD ripper supporting MP3, FLAC, Opus, Ogg Vorbis, and AAC'
authors = [
  {name = 'Gregory J. Smethells', email = 'smethegj@cs.wisc.edu'}
]
readme = 'README.md'
requires-python = '>=3.11'
license = {text = 'GPL-2.0-or-later'}
keywords = ['cd', 'ripper', 'encoder', 'mp3', 'flac', 'opus', 'ogg', 'aac']
classifiers = [
  'Development Status :: 4 - Beta',
  'Environment :: Console',
  'Intended Audience :: End Users/Desktop',
  'License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)',
  'Operating System :: POSIX :: Linux',
  'Programming Language :: Python :: 3.11',
  'Topic :: Multimedia :: Sound/Audio :: CD Audio :: CD Ripping',
]
dependencies = [
  'mutagen>=1.47.0',
  'musicbrainzngs>=0.7.1',
  'discid>=1.2.0',
]

[project.optional-dependencies]
acoustid = ['pyacoustid>=1.3.0']
progress = ['rich>=13.0.0']
dev = [
  'pytest>=7.0.0',
  'pytest-cov>=4.0.0',
  'pytest-mock>=3.12.0',
  'ruff>=0.1.0',
]

[project.scripts]
rip = 'rip.cli:main'

[project.urls]
Homepage = 'https://github.com/gsmethells/rip'
Repository = 'https://github.com/gsmethells/rip'
Issues = 'https://github.com/gsmethells/rip/issues'

[build-system]
requires = ['setuptools>=68.0.0', 'wheel']
build-backend = 'setuptools.build_meta'

[tool.setuptools.packages.find]
where = ['src']

[tool.ruff]
line-length = 120
indent-width = 2
target-version = "py311"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
# F503 = line continuation before binary operator
# F601 = duplicate key literals
# F602 = repeated dictionary keys
# F701 = break statement outside a loop
# F821 = undefined variables
# F901 = syntax or indentation error
# B904 = raise from exception
# I = Import formatting rules from isort
# Q = quote-related rules from flake8-quotes
select = ["Q", "I", "F401", "F503", "F601", "F602", "F701", "F821", "F901", "B904"]
ignore = ["N815", "SIM105"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]
"**/conftest.py" = ["F401"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"
multiline-quotes = "double"
docstring-quotes = "double"

[tool.ruff.lint.isort]
case-sensitive = true
combine-as-imports = true
no-sections = true
order-by-type = false

[tool.pytest.ini_options]
testpaths = ['test']
python_files = ['test_*.py']
python_classes = ['Test*']
python_functions = ['test_*']
addopts = '-v --strict-markers'
markers = [
  'integration: marks tests as integration tests (deselect with -m "not integration")',
]
